# nzprust

./: .gitignore  DockerFile  Readme.md  fly.toml
backend/: Cargo.toml
backend/src/: competitions.rs  constants.rs  google_auth.rs  integrations.rs  main.rs  pilots.rs  rankings.rs  scoring.rs
backend/src/data/: constants.rs  data_access.rs  mod.rs
frontend/: .gitignore  Cargo.toml  Trunk.toml  debug.ps1  index.html
frontend/src/: main.rs  routes.rs
frontend/src/components/: about.rs  competitions.rs  create_competition.rs  login.rs  mod.rs  nav_bar.rs  not_found.rs  pilot_ranking.rs  pilots.rs  progress_bar.rs  ranking.rs  user_profile.rs
frontend/src/data/: highcloud_data_types.rs  mod.rs  prs_data_types.rs
testrun/: .gitignore  Cargo.toml
testrun/src/: constants.rs  data_access.rs  main.rs  prs_data_types.rs  rankings.rs
testrun/src/data/: data_access.rs  mod.rs  prs_data_types.rs
