[package]
edition = "2021"
name = "frontend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = {version = "0.4.23", features = ["wasmbind"]}
reqwest = {version = "0.11.14"}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
url = "2.3.1"
validator = {version = "0.16.0", features = ["derive"]}
web-sys = "0.3.61"
yew = {version = "0.20", features = ["csr"]}
yew-hooks = "0.2.0"
yew-router = "0.17.0"
yewdux = "0.9.2"
yewdux-input = "0.1.0"
