[package]
edition = "2021"
name = "testrun"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = "0.6.6"
chrono = {version = "0.4.23", features = ["unstable-locales"]}
reqwest = {version = "0.11.14"}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
tokio = {version = "1.25.0", features = ["full"]}
tower-http = {version = "0.4.0", features = ["cors", "fs"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
